syntax = "proto3";

package service;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option go_package = "/service";

service ResultInfo {
    rpc InsertDomain(UnaryRequest) returns (Response);
    rpc InsertPosts(stream Post) returns (google.protobuf.UInt32Value);
    rpc GetLogs(google.protobuf.Empty) returns (stream LogData);
    rpc InsertPosts_(stream Post) returns (stream Response);
}

message UnaryRequest{
    uint64 id = 1;
    string url = 2;
}

message Response {
    uint64 id = 1;
    string message = 2;
}

message LogData {
  bytes message = 1;
}

message Post {
    uint64 id = 1;
    string title = 2;
    string link = 3;
    string pubDate = 4;
}